# NYCTrees

./: .gitignore  CMakeLists.txt  Makefile  README.md
command-files/: listallzip_cmmd_01  treeinfo_cmmd_03  treeinfo_cmmd_08
commandfiles/: listallzip_cmmd_02  listallzip_cmmd_03  listnear_cmmd_01  listnear_cmmd_02  listnear_cmmd_03  listnear_cmmd_04  printall_cmmd  treeinfo_cmmd_01  treeinfo_cmmd_02  treeinfo_cmmd_04  treeinfo_cmmd_05  treeinfo_cmmd_07  treeinfo_cmmd_09  treeinfo_cmmd_10  treeinfo_cmmd_11
inputfiles/: americantrees.csv  deadtrees.csv  manhattan.csv  manhattan_trees.csv  queens_trees.csv  random.csv  random_trees.csv  street_trees_full.csv  trees10001.csv  uniques.csv
src/: all.h  main.cpp
src/AVLTree/: AvlTree.cpp  AvlTree.h
src/Command/: command.cpp  command.h
src/GPS/: gps.cpp  gps.h
src/Tree/: tree.cpp  tree.h
src/TreeCollection/: __tree_collection.h  tree_collection.cpp  tree_collection.h
src/TreeSpecies/: __tree_species.h  tree_species.cpp  tree_species.h
tests/: time_test
